--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ body {
 }
 
 header {
-    flex: 0 80px;
+    flex: 0 70px;
 }
 
 menu {
@@ -25,11 +25,28 @@ menu {
 }
   
 main {
-    flex: 1 calc(100vh - 110px);
-    /* display: flex;
-    flex-direction: column; */
-    /* align-items: center;
-    justify-content: space-around; */
+    flex: 1 calc(100vh - 100px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+h1 {
+    padding: 1em;
+    font-family: serif;
+}
+
+h2 {
+    padding: 1em;
+}
+
+p {
+    font-family: sans-serif;
+}
+
+.survey-button {
+    margin: 1px
 }
   
 footer {
