--- a/main.css
+++ b/main.css
@@ -11,7 +11,9 @@ header {
 menu {
     display: flex;
     flex-direction: row !important;
-    list-style: none;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 0;
 }
 
 .navbar-brand {
