--- a/main.css
+++ b/main.css
@@ -65,3 +65,11 @@ footer {
 .player-name {
     color: rgb(10, 117, 19);
   }
+
+.chart-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
